@@ -3073,9 +3073,8 @@ infrun: BPSTAT_WHAT_SET_LONGJMP_RESUME (!gdbarch_get_longjmp_target)\n");
 	  stop_stepping (ecs);
 	}
       else
-	{
-	  keep_going (ecs);
-	}
+	keep_going (ecs);
+
       return;
     }
 
@@ -3288,15 +3287,12 @@ infrun: BPSTAT_WHAT_SET_LONGJMP_RESUME (!gdbarch_get_longjmp_target)\n");
          step. */
       else if (RECORD_IS_USED && !RECORD_IS_REPLAY
 	       && !RECORD_TARGET_SUPPORT_RECORD_WAIT)
-	{
-	  reverse_resume_need_step = 1;
-	}
+	reverse_resume_need_step = 1;
       else
-	{
-	  /* Set a breakpoint at callee's return address (the address
-	     at which the caller will resume).  */
-	  insert_step_resume_breakpoint_at_caller (get_current_frame ());
-	}
+	/* Set a breakpoint at callee's return address (the address
+	   at which the caller will resume).  */
+	insert_step_resume_breakpoint_at_caller (get_current_frame ());
+
       keep_going (ecs);
       return;
     }
@@ -3615,7 +3611,7 @@ step_into_function (struct execution_control_state *ecs)
 	 No step-resume breakpoint, they don't work for
 	 epilogues, which can have multiple entry paths.  */
       step_range_start = stop_func_sal.pc;
-      step_range_end   = stop_func_sal.end;
+      step_range_end = stop_func_sal.end;
       keep_going (ecs);
       return;
     }
